Fixed overflow-x issues caused by aos library

--- a/nav/stylenav.css
+++ b/nav/stylenav.css
@@ -1,3 +1,4 @@
+
 .logo{
     margin-left: 10px;
     width: 120px;
@@ -36,6 +37,7 @@
 nav{
     padding-left: 10px;
     padding-right: 10px;
+    max-width: 100%;
 }
 
 nav .links{
